--- a/templates/gsb/accueil.html.twig
+++ b/templates/gsb/accueil.html.twig
@@ -40,7 +40,7 @@
                     <li> Validation Fiche </li>
                     </a>
 
-                    <a href="{{ path('app_validation') }}" class="profil interact">
+                    <a href="{{ path('app_suivrePaiement') }}" class="profil interact">
                     <i class="fas fa-tasks"></i>
                     <li> Suivie Fiche </li>
                     </a>
