--- a/templates/gsb/suivrePaiement.html.twig
+++ b/templates/gsb/suivrePaiement.html.twig
@@ -33,8 +33,8 @@
                     </a>
             </div>
                     <a href="{{ path('app_suivrePaiement') }}" class="interact profil">
-                    <i class="fas fa-tasks"></i>
-                    <li> Suivie Fiche </li>
+                    <i class="fas fa-tasks visitePageTextColor"></i>
+                    <li class="visitePageTextColor"> Suivie Fiche </li>
                     </a>
             </nav>
         </div>
@@ -42,7 +42,7 @@
 
   <div class="title">
     <br>
-      <h1 class="title-head">Validation des frais par visiteur</h1>
+      <h1 class="title-head">Suivre le paiement fiche de frais</h1>
   <div>
 
 <br>
