--- a/templates/gsb/MesFiches.html.twig
+++ b/templates/gsb/MesFiches.html.twig
@@ -88,7 +88,7 @@
       <th scope="col">Nuitée</th>
       <th scope="col">Etape</th>
       <th scope="col">Km</th>
-      <th scope="col">Delete</th>
+      <th scope="col">Supprimer</th>
     </tr>
   </tbody>
   <tbody>
@@ -141,7 +141,7 @@
       <th scope="col">Date </th>
       <th scope="col">Libellé</th>
       <th scope="col">Montant</th>
-      <th scope="col">Delete</th>
+      <th scope="col">Supprimer</th>
     </tr>
   </tbody>
   <tbody>
