modif separation form fiche
modif separation form fiche

--- a/templates/gsb/Saisie.html.twig
+++ b/templates/gsb/Saisie.html.twig
@@ -92,6 +92,11 @@
 
 <br>
 
+               <a href="{{path('saisiefichesHorsForfait')}}" class="interact profil">
+                
+                    Saisir fiche hors forfait
+                </a>
+{# 
 
 <table class="table">
   <thead>
@@ -122,7 +127,7 @@
 </table>
 
 {{ form_end(form2) }}
-<div>
+<div> #}
 
 
 
