--- a/public/css/style.css
+++ b/public/css/style.css
@@ -227,3 +227,22 @@ table {
 .visitePageTextColor {
     color: white;
 }
+
+th.etatValide {
+    background-color: rgb(0, 199, 60) !important;
+}
+
+th.etatNonValide {
+    background-color: rgb(199, 0, 0) !important;
+    /* animation: rotation 2s infinite linear; */
+}
+
+/* @keyframes rotation {
+    from {
+        transform: rotate(0deg);
+    }
+
+    to {
+        transform: rotate(359deg);
+    }
+} */
