--- a/public/css/style.css
+++ b/public/css/style.css
@@ -229,15 +229,26 @@ table {
 }
 
 th.etatValide {
-    background-color: rgb(0, 199, 60) !important;
+    background-color: rgb(85, 230, 18) !important;
 }
 
 th.etatNonValide {
-    background-color: rgb(199, 0, 0) !important;
-    /* animation: rotation 2s infinite linear; */
+    background-color: rgb(253, 49, 49) !important;
+
 }
 
-/* @keyframes rotation {
+.wheel {
+    animation: rotation 2s infinite linear;
+}
+
+/* .login-interface {
+    width: 20%;
+    padding: 40px;
+    background-color: antiquewhite
+}
+ */
+
+@keyframes rotation {
     from {
         transform: rotate(0deg);
     }
@@ -245,4 +256,4 @@ th.etatNonValide {
     to {
         transform: rotate(359deg);
     }
-} */
+}
