bug résolu modifier fiche
bug résolu modifier fiche

--- a/templates/gsb/MesFiches.html.twig
+++ b/templates/gsb/MesFiches.html.twig
@@ -53,12 +53,12 @@
 
 <br>
 <section class="filter">
-<div class="periode">
-<h3 class="tab-color">Période</h3>
-<br>
-<input type="month">
-<button type="submit" class="btn btn-secondary">Valider</button>
-</section>
+
+  <div class="periode">
+    <h3 class="tab-color">Période</h3>
+      <br>
+    <h3>{{ "now" | date("F Y") }}</h3>
+</section
 
 
 
